@@ -381,7 +381,7 @@ class LogFormatter {
 		foreach ( $entry->getParameters() as $key => $value ) {
 			if ( strpos( $key, ':' ) === false ) continue;
 			list( $index, $type, $name ) = explode( ':', $key, 3 );
-			$params[$index - 1] = $value;
+			$params[$index - 1] = $this->formatParameterValue( $type, $value );
 		}
 
 		/* Message class doesn't like non consecutive numbering.
@@ -422,6 +422,89 @@ class LogFormatter {
 		// Bad things happens if the numbers are not in correct order
 		ksort( $params );
 		return $this->parsedParameters = $params;
+	}
+
+	/**
+	 * Formats parameters values dependent to their type
+	 * @param $type string The type of the value.
+	 *   Valid are currently:
+	 *     * - (empty) or plain: The value is returned as-is
+	 *     * raw: The value will be added to the log message
+	 *            as raw parameter (e.g. no escaping)
+	 *            Use this only if there is no other working
+	 *            type like user-link or title-link
+	 *     * msg: The value is a message-key, the output is
+	 *            the message in user language
+	 *     * msg-content: The value is a message-key, the output
+	 *                    is the message in content language
+	 *     * user: The value is a user name, e.g. for GENDER
+	 *     * user-link: The value is a user name, returns a
+	 *                  link for the user
+	 *     * title: The value is a page title,
+	 *              returns name of page
+	 *     * title: The value is a page title,
+	 *              returns name of page
+	 *     * title-link-params: The value is a page title,
+	 *                          returns link to this page with
+	 *                          the parameters (name=value)
+	 *                          seperated by "|" from title
+	 *                          and the other params
+	 *     * number: Format value as number
+	 * @param $value string The parameter value that should
+	 *                      be formated
+	 * @return string or Message::numParam or Message::rawParam
+	 *         Formated value
+	 * @since 1.21
+	 */
+	protected function formatParameterValue( $type, $value ) {
+		switch( strtolower( trim( $type ) ) ) {
+			case 'raw':
+				$value = Message::rawParam( $value );
+				break;
+			case 'msg':
+				$value = $this->msg( $value )->text();
+				break;
+			case 'msg-content':
+				$value = $this->msg( $value )->inContentLanguage()->text();
+				break;
+			case 'number':
+				$value = Message::numParam( $value );
+				break;
+			case 'user-link':
+				$user = User::newFromName( $value );
+				$value = Message::rawParam( $this->makeUserLink( $user ) );
+				break;
+			case 'title-link':
+				$title = Title::newFromText( $value );
+				$value = Message::rawParam( $this->makePageLink( $title ) );
+				break;
+			case 'title-link-params':
+				$value = explode( '|', $value );
+
+				$title = Title::newFromText( array_shift( $value ) );
+
+				$params = array();
+				foreach( $value as $param ) {
+					$param = explode( '=', $param, 2 );
+					$key = trim( $param[0] );
+					$params[$key] = trim( $param[1] );
+				}
+
+				$value = Message::rawParam( $this->makePageLink( $title, $params ) );
+				break;
+			case 'user':
+				// Do nothing because the value is already a user name, maybe
+				// we can add a check if it is valid
+			case 'title':
+				// Do nothing because the value is already a page title, maybe
+				// we can add a check if it is valid
+			case 'plain':
+			// Catch other types and use the old behavior (return as-is)
+			default:
+				// Do nothing, outputs the value as is
+		}
+
+		return $value;
 	}
 
 	/**
